add svg and create a color style (blue)

--- a/Highlight the given column.html
+++ b/Highlight the given column.html
@@ -55,6 +55,9 @@ body {
         }
         tr:hover {background-color: #75b4fc;}
         
+        #myCanvas{
+            background-color: cornflowerblue;
+        }
 }       
       </style>
               <meta charset="utf-8">
@@ -72,7 +75,8 @@ body {
         <br>
 
 
-        <div id="dateSelector"></div>
+        <div id="dateSelector" style="color: blue;">Select Year:</div>
+        <svg id="myCanvas" style="width:100%;height:200px;"> </svg>
         <table align="center">
             <thead></thead>
             <tbody></tbody>
