return to the previous code

--- a/index.html
+++ b/index.html
@@ -75,14 +75,8 @@ body {
         <br> 
         <br>
         <br>
-        <div style="color:blue">Choose introduce the number of brands:
-            <select id="brands" > 
-                <option value="10">Top 10 </option>
-                <option value="25">Top 25 </option>
-                <option value="35">Top 35 </option>
-                <option value="1000">All </option>
-            </select>
-        </div>
+        <div style="color:blue">Please introduce the number of brands:<input id="brands" type="number" size="3"> </input></div>
+        
         <br>
         <div id="dateSelector" style="color: blue;">Select Year:</div>
         <br>
